--- a/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/Views/User/ProfileData.cshtml
+++ b/Application/HomeTask.ServiceProvider/HomeTask.ServiceProvider/Views/User/ProfileData.cshtml
@@ -3,8 +3,8 @@
     ViewData["Title"] = "ProfileData";
 }
 
-<h2>Profile</h2>
 <div>
+    <h2>Profile</h2>
     <div id="profile">
         <table class="table">
             <tbody>
@@ -29,7 +29,7 @@
                     <td class="col">Roles:</td>
                     <td class="col">
                         <ul>
-                            @foreach(var role in ViewBag.ProfileData.Roles)
+                            @foreach (var role in ViewBag.ProfileData.Roles)
                             {
                                 <li>@role</li>
                             }
@@ -38,10 +38,40 @@
                 </tr>
             </tbody>
         </table>
-       
-    </div>
-    <div id="orders">
 
+    </div>
+    <h2>Orders</h2>
+    <div id="orders">
+        @if (ViewBag.ProfileData.Orders.Count > 0)
+        {
+            <table class="table">
+                <thead>
+                    <tr class="row">
+                        <th class="col">Id</th>
+                        <th class="col">Customer</th>
+                        <th class="col">Product</th>
+                        <th class="col">Count</th>
+                        <th class="col">Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var order in ViewBag.ProfileData.Orders)
+                    {
+                        <tr class="row">
+                            <td class="col">@order.Id</td>
+                            <td class="col">@order.Customer</td>
+                            <td class="col">@order.Product</td>
+                            <td class="col">@order.Count</td>
+                            <td class="col">@order.Price</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        else
+        {
+            <h3 class="centred">There is no orders yet...</h3>
+        }
     </div>
 </div>
 
